# blog

./: .gitignore  404.html  CNAME  README.md  images.py  index.html  index.xml  publish.sh  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
about-me/: index.html
archives/: index.html
categories/: index.html  index.xml
categories/example-category/: index.html  index.xml
categories/example-category/page/1/: index.html
categories/page/1/: index.html
categories/syntax/: index.html  index.xml
categories/syntax/page/1/: index.html
categories/themes/: index.html  index.xml
config/_default/: _languages.toml  config.toml  menu.toml  params.toml
contact/: index.html
content/contact/: index.md
content/hot_repos/: index.md
content/page/about/: index.md
content/post/hello-automatisation/: index.md
content/post/hello-world/: index.md
content/post/image-gallery/: index.md
content/post/last-test/: index.md
hot_repos/: index.html
links/: index.html
p/hello-world/: index.html
p/image-gallery/: index.html
p/markdown-syntax-guide/: index.html
p/math-typesetting/: index.html
p/shortcodes/: index.html
page/: index.html  index.xml
page/1/: index.html
page/page/1/: index.html
post/: index.html  index.xml
post/page/1/: index.html
search/: index.html  index.json
tags/: index.html  index.xml
tags/css/: index.html  index.xml
tags/example-tag/: index.html  index.xml
tags/html/: index.html  index.xml
tags/markdown/: index.html  index.xml
tags/page/1/: index.html
tags/themes/: index.html  index.xml
(+6 files in other folders)
